完成登出服務，列表透明度待處理

--- a/CSS/HomePage.css
+++ b/CSS/HomePage.css
@@ -16,7 +16,7 @@ tr{
 }
 #user_info{
     display : none;
-    background: #272727;
+    background: #3c3c3c;
     position: absolute;
     top: 30px;
     width: 10%;
